# vscode-kde-rocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  check-dependencies.sh  config.yaml.example  deploy.sh  install-config.sh  resources.qrc  vscode-launcher.desktop
qml/: main.qml
src/: LauncherService.cpp  LauncherService.h  ProjectManager.cpp  ProjectManager.h  main.cpp
